# event-driven-video-metadata-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.api  Dockerfile.eventbus  Dockerfile.orchestrator  Dockerfile.worker
docs/: system-design.md
infra/terraform/: auth.tf  dlq_analyzer.tf  dynamodb.tf  ecr.tf  ecs.tf  eventbridge.tf  iam.tf  locals.tf  outputs.tf  s3.tf  sqs.tf  stepfunctions.tf  variables.tf  versions.tf
observability/grafana/dashboards/: edvmp-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/prometheus/: prometheus.yml
runbooks/: dlq-triage.md  on-call.md  rollback.md
scripts/: demo_local.sh  deploy_aws.sh  destroy_aws.sh  generate_sample_video.sh  run_e2e.sh
src/edvmp/api/: auth.py  main.py
src/edvmp/eventbus/: main.py
src/edvmp/orchestrator/: handlers.py  main.py
src/edvmp/shared/: aws_dynamo_store.py  aws_sqs_queue.py  backends.py  bedrock.py  config.py  eventbridge.py  events.py  http.py  logging.py  metrics.py  models.py  queue.py  s3.py  store.py
src/edvmp/worker/: classifier.py  dlq_analyzer.py  ffprobe.py  main.py
tests/: conftest.py
tests/e2e/: test_local_e2e.py
tests/integration/: test_s3_utils.py
tests/unit/: test_dlq_analyzer.py  test_idempotency.py  test_workflow_transitions.py
